# mini-turtlebot

./: .gitignore  .~lock.README_NONROS.md#  LICENSE  README.md  README_NONROS.md  codex_all_in.code-workspace
ai_pipeline/: .env.example  .~lock.README.md#  README.md  ai_control_cli.py  ai_control_cli.sh  analyze_metrics.py  run_benchmark.sh  start_rosfree_stack.sh  stop_rosfree_stack.sh
atrbridge_core/: CMakeLists.txt  README.md
atrbridge_core/include/atrbridge_core/: core.hpp  framing.hpp  transport_tcp.hpp
atrbridge_core/src/: core.cpp  daemon_main.cpp  framing.cpp  transport_tcp.cpp  ws_gateway_main.cpp
firmware/esp32/tb_base/: CMakeLists.txt  platformio.ini  sdkconfig.arduino_nano_esp32
firmware/esp32/tb_base/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  tb_font6x8.h  tb_i2c.c  tb_i2c.h  tb_imu.c  tb_imu.h  tb_ir.c  tb_ir.h  tb_lidar.c  tb_lidar.h  tb_motors.c  tb_motors.h  tb_oled.c  tb_oled.h  tb_pins  tb_tcp_server.c  tb_tof.c  tb_tof.h  tb_wifi.c  tb_wifi.h
ros2_ws/: README.md  README_AI_STACK.md  ai_control_cli.sh  launch_ai_stack.sh
ros2_ws/ai_pipeline/: README.md  README_old.md  ai_behavior_gen.py  ailinker_standalone.py  analyze_metrics.py  metrics.py  requirements.txt  run_task.sh  start_rosfree_stack.sh
ros2_ws/src/ailinker/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/ailinker/ailinker/: __init__.py  ailinker_server.py  llm_orchestrator.py
ros2_ws/src/ailinker/resource/: ailinker
ros2_ws/src/roslinker/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/roslinker/launch/: bringup.launch.py
ros2_ws/src/roslinker/src/: roslinker_node.cpp
ros2_ws/src/tb_bridge_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/tb_bridge_cpp/include/tb_bridge_cpp/: bridge_node.hpp  framing.hpp  transport_tcp.hpp
ros2_ws/src/tb_bridge_cpp/src/: bridge_node.cpp  framing.cpp  main.cpp  transport_tcp.cpp
ros2_ws/src/tb_bringup/: package.xml  setup.py
ros2_ws/src/tb_bringup/launch/: bringup.launch.py
ros2_ws/src/tb_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/tb_interfaces/msg/: LinkStats.msg
ros2_ws/src/tb_interfaces/srv/: GetCapabilities.srv  GetLinkStats.srv  SetTelemetry.srv
ros2_ws/src/tb_tools/: package.xml  setup.py
