<?xml version="1.0"?>
<package format="3">
  <name>roslinker</name>
  <version>0.1.0</version>
  <description>ROS linker for atrbridge_core</description>
  <maintainer email="shaon@todo.todo">shaon</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tb_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
