<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb_bridge_cpp</name>
  <version>0.0.1</version>
  <description>C++ ROS2 bridge for Mini TurtleBot (swarm namespace, runtime telemetry config).</description>

  <maintainer email="shaon@todo.todo">shaon</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <depend>tb_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

