<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb_interfaces</name>
  <version>0.0.1</version>
  <description>Interfaces (messages/services) for TurtleBot bridge configuration and link statistics.</description>

  <maintainer email="you@todo.todo">TODO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROSIDL generators -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Message deps -->
  <depend>builtin_interfaces</depend>

  <!-- Needed for group membership / interface packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

